# tap-mysql

./: .pre-commit-config.yaml  README.md  catalog.json  config.json  docker-compose.yml  meltano.yml  out  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release_workflow.yml  test.yml
tap_mysql/: __init__.py  client.py  tap.py
tests/: __init__.py  test_core.py  test_replication_key.py  test_selected_columns_only.py  test_ssh_tunnel.py
tests/resources/: data.json  data_selected_columns_only.json
