[tool.poetry]
name = "tap-mysql"
version = "0.0.1"
description = "`tap-mysql` is a Singer tap for mysql, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["AutoIDM"]
keywords = [
    "ELT",
    "mysql",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
fs-s3fs = { version = "==1.1.1", optional = true }
singer-sdk = { version="~=0.35.0" }
pymysql = "==1.1.0"
sqlalchemy = "<3"
sshtunnel = "0.4.0"

# Binary client for MySQL
mysqlclient = { version = "==2.2.4", optional = true }

[tool.poetry.group.dev.dependencies]
faker = ">=20"
pytest = ">=7.3.2"
singer-sdk = { version="~=0.35.0", extras = ["testing"] }
remote-pdb=">=2.1.0"

[tool.poetry.group.typing.dependencies]
mypy = ">=1.8.0"
sqlalchemy = { version = "<3", extras = ["mypy"] }
types-paramiko = ">=3.4.0.20240120"

[tool.poetry.extras]
s3 = ["fs-s3fs"]
binary = ["mysqlclient"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlalchemy.ext.mypy.plugin"  # TODO: Remove this when SQLAlchemy 2.0 is supported

[tool.ruff]
src = ["tap_mysql"]
target-version = "py38"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "sshtunnel.*",  # https://github.com/pahaz/sshtunnel/issues/265
]

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    # Conflict with Ruff's formatter
    "COM812",
    "ISC001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_mysql"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mysql = 'tap_mysql.tap:TapMySQL.cli'
