[tool.poetry]
name = "meltanolabs-tap-mysql"
version = "0.0.0"
description = "`tap-mysql` is a Singer tap for mysql, built with the Meltano Singer SDK."
authors = ["Meltano Team and Contributors <hello@meltano.com>"]
maintainers = ["Meltano Team and Contributors <hello@meltano.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://meltano.com"
repository = "https://github.com/meltanolabs/tap-mysql"
keywords = [
    "MySQL",
    "Vitess",
    "PlanetScale",
    "Singer",
    "ELT",
    "Meltano",
    "Meltano SDK",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "tap_mysql" }
]

[tool.poetry.dependencies]
python = ">=3.8"
fs-s3fs = { version = "==1.1.1", optional = true }
singer-sdk = { version=">=0.35.2,<0.38.0" }
pymysql = "==1.1.0"
sqlalchemy = "<2"
sshtunnel = "0.4.0"

# Binary client for MySQL
mysqlclient = { version = "==2.2.4", optional = true }

[tool.poetry.group.dev.dependencies]
faker = ">=20"
pytest = ">=7.3.2"
singer-sdk = { version=">=0.35.2,<0.38.0", extras = ["testing"] }
remote-pdb=">=2.1.0"

[tool.poetry.group.typing.dependencies]
mypy = ">=1.8.0"
sqlalchemy = { version = "<2", extras = ["mypy"] }
types-paramiko = ">=3.4.0.20240120"

[tool.poetry.extras]
s3 = ["fs-s3fs"]
binary = ["mysqlclient"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlalchemy.ext.mypy.plugin"  # TODO: Remove this when SQLAlchemy 2.0 is supported

[tool.ruff]
src = ["tap_mysql"]
target-version = "py38"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "sshtunnel.*",  # https://github.com/pahaz/sshtunnel/issues/265
]

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    # Conflict with Ruff's formatter
    "COM812",
    "ISC001",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_mysql"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-mysql = 'tap_mysql.tap:TapMySQL.cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
